syntax = "proto3";

package quaiprotocol;
option go_package = "github.com/dominant-strategies/go-quai/p2p/pb";

import "p2p/pb/block.proto";

// GossipSub messages for broadcasting blocks and transactions
message GossipBlock { block.Block block = 1; }

message GossipTransaction { block.Transaction transaction = 1; }

// QuaiRequestMessage is the main 'envelope' for QuaiProtocol request messages
message QuaiRequestMessage {
  Location location = 1;
  Hash hash = 2;
  oneof request {
    block.Block block = 3;
    block.Header header = 4;
    block.Transaction transaction = 5;
  }
}

// QuaiResponseMessage is the main 'envelope' for QuaiProtocol response messages
message QuaiResponseMessage {
  oneof response {
    block.Block block = 1;
    block.Header header = 2;
    block.Transaction transaction = 3;
  }
}

message Location { bytes location = 1; }

// Hash structure
message Hash {
  bytes hash = 1; // Hash is an array of 32 bytes
}
